--- a/app/src/main/res/layout/prompts.xml
+++ b/app/src/main/res/layout/prompts.xml
@@ -27,7 +27,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="20dp"
         android:text="Message: "
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -44,12 +44,30 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Set By: "
+        android:layout_marginBottom="20dp"
+        android:text="Date: "
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
 
     <EditText
         android:id="@+id/editSetBy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <requestFocus />
+
+    </EditText>
+
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="Time: "
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/editTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
