--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="divider_color">#FF4081</color>
+    <color name="divider_color">#FFFFFF</color>
     <color name="white">#FFFFFF</color>
+    <color name="lightblue">#F019D1</color>
 </resources>
