--- a/app/src/main/res/layout/activity_alerts.xml
+++ b/app/src/main/res/layout/activity_alerts.xml
@@ -81,7 +81,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/setBy"
+            android:id="@+id/date"
             android:paddingBottom="10dp"
             android:paddingLeft="0dp"
             android:paddingRight="5dp"
