[11-21-2016] populate alerts table from database on startup

--- a/app/src/main/res/layout/prompts.xml
+++ b/app/src/main/res/layout/prompts.xml
@@ -46,7 +46,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
-        android:id="@+id/editSetBy"
+        android:id="@+id/editDate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
