--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -40,23 +40,11 @@
         android:layout_toRightOf="@+id/ActivityButton"
         android:layout_toEndOf="@+id/ActivityButton" />
 
-    <ImageButton
-        android:layout_width="70dp"
-        android:layout_height="75dp"
-        android:src="@drawable/ic_dashboard"
-        android:id="@+id/dashBoardButton"
-        android:scaleType="fitXY"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="34dp"
-        android:layout_marginStart="34dp" />
-
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="400dp"
         android:layout_height="50dp"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:text="Activity: "
         android:id="@+id/activity"
         android:layout_marginBottom="21dp"
@@ -65,10 +53,10 @@
         android:layout_alignStart="@+id/dashBoardButton" />
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="400dp"
         android:layout_height="50dp"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:text="Sleep: "
         android:id="@+id/sleepPattern"
         android:layout_marginBottom="70dp"
@@ -77,10 +65,10 @@
         android:layout_alignStart="@+id/activity" />
 
     <TextView
-        android:layout_width="200dp"
+        android:layout_width="400dp"
         android:layout_height="50dp"
         android:textColor="@color/white"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:text="Heart Rate: "
         android:id="@+id/heartRate"
         android:layout_above="@+id/sleepPattern"
@@ -89,13 +77,25 @@
         android:layout_marginBottom="25dp" />
 
     <ImageView
-        android:layout_width="200dp"
+        android:layout_width="400dp"
         android:layout_height="200dp"
         android:src="@mipmap/ic_logo"
         android:layout_above="@+id/heartRate"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="46dp"
         android:id="@+id/logo" />
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="75dp"
+        android:src="@drawable/ic_dashboard"
+        android:id="@+id/dashBoardButton"
+        android:scaleType="fitXY"
+        android:layout_marginLeft="34dp"
+        android:layout_marginStart="34dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
