[01-27-2017] Sync Sleep Page

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="8dp"
     android:paddingTop="10dp"
-    android:background="#828282"
+    android:background="@color/background"
     tools:context="mcmaster.eguardian.Main">
 
     <ImageButton
